--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.0",
+    "firebase": "^7.15.5",
+    "formik": "^2.1.4",
+    "moment": "^2.27.0",
+    "number-to-words": "^1.2.4",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-icons": "^3.10.0",
+    "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
+    "react-spinners": "^0.9.0",
+    "reactfire": "^2.0.3",
+    "yup": "^0.29.1"
   },
   "scripts": {
     "start": "react-scripts start",
