--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,13 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-spinners": "^0.9.0",
     "reactfire": "^2.0.3",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "yup": "^0.29.1"
   },
   "scripts": {
